fix overflow bugs

--- a/feeds/static/feeds/style.css
+++ b/feeds/static/feeds/style.css
@@ -13,6 +13,7 @@ main {
   height: 100vh;
   height: -webkit-fill-available;
   max-height: 100vh;
+  width: 100vw;
 }
 
 .bi {
